[package]
name = "cred-spider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
indicatif = "0.17.8"
futures = "0.3.30"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
clap = { version = "4.5.0", features = ["cargo"] }
async-recursion = "1.0.5"
lazy_static = "1.4.0"
native-tls = "0.2.11"
regex = "1.10.3"
reqwest = "0.11"
scraper = "0.18.1"
tokio = { version = "1", features = ["full"] }
url = "2.5.0"
mongodb = "2.0"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
